Update project files